--- a/src/app/components/confirm-users-dialog/confirm-users-dialog.component.html
+++ b/src/app/components/confirm-users-dialog/confirm-users-dialog.component.html
@@ -1,13 +1,19 @@
 <h1 mat-dialog-title>Recommended Users</h1>
 <div mat-dialog-content>
+    <div mat-subheader>Notification summary</div>
+    <p> {{data.notification.text}} </p>
+    <p *ngFor="let notificationCategory of data.notification.notificationCategories">
+        {{notificationCategory.category}} - {{notificationCategory.grade}}
+    </p>
+    <div mat-subheader>Choose final list of users</div>
     <mat-selection-list #list (ngModelChange)="onSelectedOptionsChange()"
         [compareWith]="comparator" [formControl]="formControl">
-        <mat-list-option *ngFor="let user of data.users" [value]="user">
-            {{user}}
+        <mat-list-option *ngFor="let user of users" [value]="user">
+            {{user.firstName}} {{user.lastName}}
         </mat-list-option>
     </mat-selection-list>
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onCancelClick()">Cancel</button>
-    <button mat-button [mat-dialog-close]="data.users" cdkFocusInitial>Send</button>
+    <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Send</button>
 </div>
