--- a/src/app/components/edit-user-dialog/edit-user-dialog.component.html
+++ b/src/app/components/edit-user-dialog/edit-user-dialog.component.html
@@ -18,6 +18,8 @@
       {{toggle.checked ? 'enabled' : 'not enabled'}}
     </mat-slide-toggle>
   </section>
+  <mat-divider></mat-divider>
+  <div mat-subheader>Skills Grades</div>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onCancelClick()">Cancel</button>
