--- a/src/app/components/send-notification/send-notification.component.html
+++ b/src/app/components/send-notification/send-notification.component.html
@@ -3,6 +3,7 @@
     <mat-card-title>Send notification</mat-card-title>
     <mat-card-content>
         <form class="notification-form" [formGroup]="notificationForm" (ngSubmit)="onSubmit()">
+            
             <p>
                 <mat-form-field class="full-width">
                     <input matInput [formControl]="descriptionInput" placeholder="Description" cdkFocusInitial>
@@ -11,13 +12,17 @@
                     </mat-error>
                 </mat-form-field>
             </p>
+            <!-- <p *ngFor="let category of categories">
+                <mat-form-field class="full-width">
+                    <input matInput [formControl]="{{category}}Input" placeholder="{{category}}">
+                    <mat-error *ngIf="{{category}}Input.hasError('required')">
+                        {{category}} Grade is <strong>required</strong>
+                    </mat-error>
+                </mat-form-field>
+            </p> -->
             <p>
                 <mat-form-field class="full-width">
-                    <input matInput [formControl]="designInput" [type]="hide ? 'password' : 'text'"
-                        placeholder="Design">
-                    <mat-icon matSuffix (click)="hide = !hide">
-                        {{hide ? 'visibility_off' : 'visibility'}}
-                    </mat-icon>
+                    <input matInput [formControl]="designInput" placeholder="Design">
                     <mat-error *ngIf="designInput.hasError('required')">
                         Design Grade is <strong>required</strong>
                     </mat-error>
@@ -25,11 +30,7 @@
             </p>
             <p>
                 <mat-form-field class="full-width">
-                    <input matInput [formControl]="prInput" [type]="hide ? 'password' : 'text'"
-                        placeholder="PR">
-                    <mat-icon matSuffix (click)="hide = !hide">
-                        {{hide ? 'visibility_off' : 'visibility'}}
-                    </mat-icon>
+                    <input matInput [formControl]="prInput" placeholder="PR">
                     <mat-error *ngIf="prInput.hasError('required')">
                         PR Grade is <strong>required</strong>
                     </mat-error>
@@ -37,11 +38,7 @@
             </p>
             <p>
                 <mat-form-field class="full-width">
-                    <input matInput [formControl]="hrInput" [type]="hide ? 'password' : 'text'"
-                        placeholder="HR">
-                    <mat-icon matSuffix (click)="hide = !hide">
-                        {{hide ? 'visibility_off' : 'visibility'}}
-                    </mat-icon>
+                    <input matInput [formControl]="hrInput" placeholder="HR">
                     <mat-error *ngIf="hrInput.hasError('required')">
                         HR Grade is <strong>required</strong>
                     </mat-error>
@@ -49,11 +46,7 @@
             </p>
             <p>
                 <mat-form-field class="full-width">
-                    <input matInput [formControl]="itInput" [type]="hide ? 'password' : 'text'"
-                        placeholder="IT">
-                    <mat-icon matSuffix (click)="hide = !hide">
-                        {{hide ? 'visibility_off' : 'visibility'}}
-                    </mat-icon>
+                    <input matInput [formControl]="itInput" placeholder="IT">
                     <mat-error *ngIf="itInput.hasError('required')">
                         IT Grade is <strong>required</strong>
                     </mat-error>
@@ -61,11 +54,7 @@
             </p>
             <p>
                 <mat-form-field class="full-width">
-                    <input matInput [formControl]="frInput" [type]="hide ? 'password' : 'text'"
-                        placeholder="FR">
-                    <mat-icon matSuffix (click)="hide = !hide">
-                        {{hide ? 'visibility_off' : 'visibility'}}
-                    </mat-icon>
+                    <input matInput [formControl]="frInput" placeholder="FR">
                     <mat-error *ngIf="frInput.hasError('required')">
                         FR Grade is <strong>required</strong>
                     </mat-error>
