--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -2,6 +2,8 @@
 <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" class="products">
   <mat-card fxFlex="100%" fxFlex.gt-sm="66%" class="mat-elevation-z1">
     <mat-card-header>
+      <div mat-card-avatar class="header-image"
+      [style.background-image]="'url(\'C:/Users/Dell/UBB/Licenta/BESTApplication/client/src/assets/logos_events/logo_' + event.name + '.png\')'"></div>
       <mat-card-title>{{event.name}}</mat-card-title>
       <mat-card-subtitle>Since {{event.firstYear}}</mat-card-subtitle>
     </mat-card-header>
