require webpush solved

--- a/src/app/components/send-notification/send-notification.component.html
+++ b/src/app/components/send-notification/send-notification.component.html
@@ -60,7 +60,7 @@
                 </mat-form-field>
             </p>
             <div class="button">
-                <button mat-raised-button color="primary" [disabled]="loading" type="submit">Get Recommended Users</button>
+                <button mat-raised-button color="primary" type="submit">Get Recommended Users</button>
             </div>
         </form>
     </mat-card-content>
